LPS-139667 build rest
