# modules/apps/webhooks/webhooks-rest-impl/src/main/java/com/liferay/headless/webhooks/internal/resource/v1_0/WebhookEntityResourceImpl.java
@@ -1,0 +1,30 @@
+/**
+ * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
+ *
+ * This library is free software; you can redistribute it and/or modify it under
+ * the terms of the GNU Lesser General Public License as published by the Free
+ * Software Foundation; either version 2.1 of the License, or (at your option)
+ * any later version.
+ *
+ * This library is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
+ * details.
+ */
+
+package com.liferay.headless.webhooks.internal.resource.v1_0;
+
+import com.liferay.headless.webhooks.resource.v1_0.WebhookEntityResource;
+
+import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.ServiceScope;
+
+/**
+ * @author Luis Miguel Barcos
+ */
+@Component(
+	properties = "OSGI-INF/liferay/rest/v1_0/webhook-entity.properties",
+	scope = ServiceScope.PROTOTYPE, service = WebhookEntityResource.class
+)
+public class WebhookEntityResourceImpl extends BaseWebhookEntityResourceImpl {
+}
